<resources>
    <string name="app_name">cs441-assignment2-android</string>
    <string name="action_settings">Settings</string>
    <string name="_title">gravi-2048</string>
    <string name="_currentScore">current score:</string>
    <string name="_bestScore">best score:</string>
    <string name="_gameOver">game over! :(</string>
    <string name="_youWon">you won! :)</string>
    <string name="_score">0</string>
    <string name="_best_score">0</string>
    <string name="_GVbackground">GridView Background</string>
</resources>
