<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:layout_width="250dp"
        android:layout_height="51dp"
        android:text="@string/_title"
        android:textAllCaps="false"
        android:textColor="@color/hackerGreen"
        android:textSize="40sp"
        app:fontFamily="monospace"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.113" />

    <TextView
        android:id="@+id/gom"
        android:layout_width="319dp"
        android:layout_height="53dp"
        android:text="@string/_gameOver"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="40sp"
        app:fontFamily="monospace"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.188" />

    <TextView
        android:layout_width="250dp"
        android:layout_height="51dp"
        android:text="@string/_currentScore"
        android:textAllCaps="false"
        android:textColor="@color/hackerGreen"
        android:textSize="20sp"
        app:fontFamily="monospace"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.733" />

    <TextView
        android:layout_width="250dp"
        android:layout_height="51dp"
        android:text="@string/_bestScore"
        android:textAllCaps="false"
        android:textColor="@color/hackerGreen"
        android:textSize="20sp"
        app:fontFamily="monospace"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.714"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.769" />

    <TextView
        android:id="@+id/score"
        android:layout_width="75dp"
        android:layout_height="31dp"
        android:text="@string/_score"
        android:textAllCaps="false"
        android:textColor="@color/hackerGreen"
        android:textSize="20sp"
        app:fontFamily="monospace"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.758"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.712" />

    <TextView
        android:id="@+id/best_score"
        android:layout_width="75dp"
        android:layout_height="31dp"
        android:text="@string/_score"
        android:textAllCaps="false"
        android:textColor="@color/hackerGreen"
        android:textSize="20sp"
        app:fontFamily="monospace"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.758"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.747" />

</android.support.constraint.ConstraintLayout>